code clean up and additional notes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <!-- this would be the header -->
+    <!-- updated to header -->
     
     <header>  
         <h1>Hori<span class="seo">seo</span>n</h1>
-       <!-- this is the nav section  -->
+       <!-- updated to  nav section  -->
         <nav>
             <ul>
                 <li>
@@ -29,7 +29,7 @@
         <!-- this is a section this is the image under the header -->
     </header>
     <div class="hero"></div>
-    <!-- this is the 3 sections on the right -->
+    <!-- this is the 3 sections on the right I updated to Main -->
     <main>
         <!-- this is a section -->
         <section class="search-engine-optimization">
