corrected SEO link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- this is the 3 sections on the right I updated to Main -->
     <main>
         <!-- this is a section -->
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook with SEO on cover, coffee cup, laptop with magnifying glass and  and pencil cup"/>
             <h2>Search Engine Optimization</h2>
             <p>
