--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <!-- this is a section this is the image under the header -->
     </header>
-    <div class="hero"></div>
+    <div class="hero" alt="people in meeting"></div>
     <!-- this is the 3 sections on the right I updated to Main -->
     <main>
         <!-- this is a section -->
