added additional comments

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
         </nav>
-        <!-- this is a section this is the image under the header -->
+        <!-- this is a section this is the image under the header background image in css -->
     </header>
     <div class="hero" alt="people in meeting"></div>
     <!-- this is the 3 sections on the right I updated to Main -->
