--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- updated title to reflect company name from generic -->
+    <title>Horiseon Social Solutions</title>
 </head>
 
 <body>
